--- a/EX1/EX1.csproj
+++ b/EX1/EX1.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\..\..\Desktop\AtividadeAvaliativa1\Ex1.cs" />
+    <Compile Include="Ex1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
