--- a/EX2/EX2.csproj
+++ b/EX2/EX2.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\..\..\Desktop\AtividadeAvaliativa1\Ex2.cs" />
+    <Compile Include="Ex2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
