--- a/EX3/EX3.csproj
+++ b/EX3/EX3.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\..\..\Desktop\AtividadeAvaliativa1\Ex3.cs" />
+    <Compile Include="Ex3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
