--- a/EX4/EX4.csproj
+++ b/EX4/EX4.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\..\..\Desktop\AtividadeAvaliativa1\Ex4.cs" />
+    <Compile Include="Ex4.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
